--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>AlFederalyTeam</title>
+		<title>SHEHABAHMED</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
@@ -19,13 +19,13 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-							<h1>(AlFederaly)</h1>
+							<h1>(AL-FedralySA)</h1>
 							<p>Official Cydia Repo</p>
 						</header>
 
 						<footer>
 							<ul class="icons">
-								<li><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https%3A%2F%2F((http://AlFederalyTeam.github.io)).github.io" class="fa-plus">Add Repo</a></li>
+								<li><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https%3A%2F%2F((https://alfederalyteam.github.io/" class="fa-plus">Add Repo</a></li>
 							</ul>
 						</footer>
 					</section>
@@ -33,7 +33,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; AlFederalyTeam</li>
+							<li>&copy; FedralySA</li>
 						</ul>
 					</footer>
 
